fix: changed alignment of button

--- a/editor-components/intro-section/intro-section5/intro-section5.module.scss
+++ b/editor-components/intro-section/intro-section5/intro-section5.module.scss
@@ -174,6 +174,8 @@
           justify-content: center;
           padding: 24px;
           font-size: 40px;
+          position: relative;
+          height: 120px;
 
           .icon {
             width: 48px;
@@ -181,6 +183,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            position: absolute;
+            left: 50%;
+            bottom: 24px;
+            transform: translateX(-50%);
 
             :global(svg) {
               width: 100%;
@@ -202,6 +208,7 @@
   min-height: 100vh;
 }
 
+/* BURASI DÜZELTİLDİ: textler tekrar ortada */
 .container.media-active .max-content .vertical-content .text-wrapper {
   margin-top: auto;
   margin-bottom: auto;
@@ -212,9 +219,10 @@
   margin-bottom: 0;
 }
 
+/* BUTON AYNI KALDI: en altta */
 .container.media-active .max-content .vertical-content .buttons {
-  margin-top: 0;
-  margin-bottom: calc(var(--composer-gap-xl) * 1.5);
+  margin-top: auto;
+  margin-bottom: 0;
 }
 
 .container:not(.media-active) .max-content .vertical-content .buttons {
